[gd_scene load_steps=9 format=3 uid="uid://chsx0q21qsby3"]

[ext_resource type="Script" path="res://game_scenes/Intro.gd" id="1_ky6kw"]
[ext_resource type="Texture2D" uid="uid://cfitb7k6y3vce" path="res://assets/faces/player.png" id="1_w1jvo"]
[ext_resource type="Texture2D" uid="uid://cti8qwisdwyyg" path="res://assets/faces/bank.png" id="2_vn0qk"]
[ext_resource type="AudioStream" uid="uid://c0od5g6jabj6r" path="res://assets/sfx/phone_ring.ogg" id="3_jfrnq"]

[sub_resource type="Animation" id="Animation_wiwbv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line01/Label01:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line02:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line02/Label02:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line03:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line03/Label03:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line04:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line04/Label04:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line05:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line05/Label05:visible_ratio")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer/Scene01/NextButton:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CanvasLayer/Scene01/NextButton:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CanvasLayer/Scene01:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("CanvasLayer/Scene02:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("CanvasLayer/Scene02/VBoxContainer/Label:visible_ratio")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("CanvasLayer/Scene02/VBoxContainer/StartButton:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_p7b4i"]
resource_name = "cutscene"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_jfrnq")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line01/Label01:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line02:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line02/Label02:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line03:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4.5, 4.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line03/Label03:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(4.7, 5.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line04:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(6, 6.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line04/Label04:visible_ratio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(6.2, 9.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line05:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(9.2, 9.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer/Scene01/VBoxContainer/Line05/Label05:visible_ratio")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(9.4, 12.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CanvasLayer/Scene01/NextButton:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(11.4, 12.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CanvasLayer/Scene01/NextButton:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(11.3, 11.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_sppo2"]
resource_name = "cutscene_02"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Scene01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Scene02:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Scene02/VBoxContainer/Label:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Scene02/VBoxContainer/StartButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e7pry"]
_data = {
"RESET": SubResource("Animation_wiwbv"),
"cutscene_01": SubResource("Animation_p7b4i"),
"cutscene_02": SubResource("Animation_sppo2")
}

[node name="Intro" type="Node2D"]
script = ExtResource("1_ky6kw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Scene01" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Scene01"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Line01" type="HBoxContainer" parent="CanvasLayer/Scene01/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Scene01/VBoxContainer/Line01"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_w1jvo")

[node name="Label01" type="Label" parent="CanvasLayer/Scene01/VBoxContainer/Line01"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Pronto?"
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Line02" type="HBoxContainer" parent="CanvasLayer/Scene01/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label02" type="Label" parent="CanvasLayer/Scene01/VBoxContainer/Line02"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Buongiorno, la chiamo dalla sua banca!"
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Scene01/VBoxContainer/Line02"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_vn0qk")

[node name="Line03" type="HBoxContainer" parent="CanvasLayer/Scene01/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Scene01/VBoxContainer/Line03"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_w1jvo")

[node name="Label03" type="Label" parent="CanvasLayer/Scene01/VBoxContainer/Line03"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Buongiorno, mi dica…"
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Line04" type="HBoxContainer" parent="CanvasLayer/Scene01/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label04" type="Label" parent="CanvasLayer/Scene01/VBoxContainer/Line04"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "La chiamo per ricordarle l'ultima rata per rimborsare il prestito di 20.000 soldi."
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Scene01/VBoxContainer/Line04"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_vn0qk")

[node name="Line05" type="HBoxContainer" parent="CanvasLayer/Scene01/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Scene01/VBoxContainer/Line05"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_w1jvo")

[node name="Label05" type="Label" parent="CanvasLayer/Scene01/VBoxContainer/Line05"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Certo, certo, ho ancora 7 giorni, non si preoccupi…"
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="NextButton" type="Button" parent="CanvasLayer/Scene01"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Continua »"

[node name="Scene02" type="CenterContainer" parent="CanvasLayer"]
visible = false
offset_left = 60.0
offset_top = 40.0
offset_right = 900.0
offset_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Scene02"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Scene02/VBoxContainer"]
layout_mode = 2
text = "Mi mancano solo 2.000 soldi, ce la posso fare!"
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="StartButton" type="Button" parent="CanvasLayer/Scene02/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Andiamo!"

[node name="SkipButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_right = -8.0
offset_bottom = 49.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "×"

[node name="CutscenePlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e7pry")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="CanvasLayer/Scene01/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Scene02/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SkipButton" to="." method="_on_skip_button_pressed"]
